templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: alb-internal-test
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: app-routing
    external-dns.alpha.kubernetes.io/hostname: myapps.internal.core.dcli.com
spec:
  rules:
    - host: myapps.internal.core.dcli.com
      http:
        paths:
          - path: /javaapi
            pathType: Prefix
            backend:
              service:
                name: javaapi
                port:
                  number: 80
          - path: /nodeapi
            pathType: Prefix
            backend:
              service:
                name: nodeapi
                port:
                  number: 80
          - path: /react-ui
            pathType: Prefix
            backend:
              service:
                name: react-ui
                port:
                  number: 80
